--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,15 +1,16 @@
 <!-- templates/registration/password_reset_form.html -->
 {% extends 'base.html' %}
 
-{% block title %}Forgot Your Password?{% endblock %}
+{% block title %}Parolanızı mı unuttunuz?{% endblock %}
 
 {% block content %}
-  <h1>Forgot your password?</h1>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+  <h1>Parolanızı mı unuttunuz?</h1>
+  <p>Yeni parolanızı oluşturmanız için gerekli yönergeleri e-posta adresinize yollamamız için e-posta adresinizi giriniz.</p>
 
   <form method="POST">
-    {% csrf_token %}
+    {% csrf_token %} 
     {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    <button type="submit" class="btn btn-warning">Yolla bakalım!</button>
   </form>
 {% endblock %}
+
