--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
 <!-- templates/registration/password_reset_complete.html -->
 {% extends 'base.html' %}
 
-{% block title %}Password reset complete{% endblock %}
+{% block title %}Parola sıfırlama tamamlandı.{% endblock %}
 
 {% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
+<h1>Parola sıfırlama tamamlandı.</h1>
+<p>Yeni parolanız ayarlandı. Giriş yapmak için;  <a href="{% url 'login' %}">giriş sayfası</a>.</p>
 {% endblock %}
