--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,13 @@
 <!-- templates/registration/password_reset_confirm.html -->
 {% extends 'base.html' %}
 
-{% block title %}Enter new password{% endblock %}
+{% block title %}Yeni parola girin.{% endblock %}
 
 {% block content %}
-<h1>Set a new password!</h1>
+<h1>Yeni parolanızı belirleyin!</h1>
 <form method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Change my password">
+  <button type="submit" class="btn btn-warning">Parolamı değiştir.</button>
 </form>
 {% endblock %}
