--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,9 +1,9 @@
 <!-- templates/registration/password_reset_done.html -->
 {% extends 'base.html' %}
 
-{% block title %}Email Sent{% endblock %}
+{% block title %}Mail yolladık!{% endblock %}
 
 {% block content %}
-  <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+  <h1>Gelen kutunuzu kontrol ediniz.</h1>
+  <p>Parolanızı değiştirmek için gerekli yönergeleri size mail olarak gönderdik. Gelen kutunuzu kontrol ediniz.</p>
 {% endblock %}
